// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package proto_processing_lib.scrubber.log.testing;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

enum TestEnum {
  ENUM1 = 0;
  ENUM2 = 1;
  ENUM3 = 2;
}

message MapMessage {
  string map_id = 1;
  map<string, MapValue> properties = 2;
}

message MapValue {
  string name = 1;
  repeated string repeated_value = 2;
}

message TestEmbeddedMessage {
  int32 singular_int32 = 1;
  int64 singular_int64 = 2;
  uint32 singular_uint32 = 3;
  uint64 singular_uint64 = 4;
  double singular_double = 5;
  float singular_float = 6;
  bool singular_bool = 7;
  string singular_string = 8 [ctype = CORD];
  TestEnum singular_enum = 9;
  repeated int32 repeated_int32 = 10;
  repeated int64 repeated_int64 = 11;
  repeated uint32 repeated_uint32 = 12 [packed = true];
  repeated uint64 repeated_uint64 = 13;
  repeated double repeated_double = 14 [packed = true];
  repeated float repeated_float = 15;
  repeated bool repeated_bool = 16;
  repeated string repeated_string = 17 [ctype = CORD];
  repeated TestEnum repeated_enum = 18;
  repeated TestEmbeddedMessage message_embedded = 19;
  google.protobuf.Timestamp timestamp = 20;
  google.protobuf.Duration duration = 21;
  google.protobuf.DoubleValue wkt_double = 22;
  google.protobuf.FloatValue wkt_float = 23;
  google.protobuf.Int64Value wkt_int64 = 24;
  google.protobuf.UInt64Value wkt_uint64 = 25;
  google.protobuf.Int32Value wkt_int32 = 26;
  google.protobuf.UInt32Value wkt_uint32 = 27;
  google.protobuf.BoolValue wkt_bool = 28;
  google.protobuf.StringValue wkt_string = 29;
  google.protobuf.BytesValue wkt_bytes = 30;
  MapMessage message_map = 31;
  SecondLevelEmbeddedMessage embedded2 = 32;
  map<int64, SecondLevelEmbeddedMessage> map_embedded2 = 33;
}

message SecondLevelEmbeddedMessage {
  int32 singular_int32 = 1;
  string singular_string = 2 [ctype = CORD];
  repeated ThirdLevelEmbeddedMessage embedded3 = 3;
}

message ThirdLevelEmbeddedMessage {
  int32 singular_int32 = 1;
  repeated string repeated_string = 2 [ctype = CORD];
  TestEnum singular_enum = 3;
  repeated TestEmbeddedMessage message_embedded = 4;
}

message TestMessage {
  int32 singular_int32 = 1;
  int64 singular_int64 = 2;
  uint32 singular_uint32 = 3;
  uint64 singular_uint64 = 4;
  double singular_double = 5;
  float singular_float = 6;
  bool singular_bool = 7;
  string singular_string = 8 [ctype = CORD];
  TestEnum singular_enum = 9;
  repeated int32 repeated_int32 = 10 [packed = true];
  repeated int64 repeated_int64 = 11;
  repeated uint32 repeated_uint32 = 12;
  repeated uint64 repeated_uint64 = 13;
  repeated double repeated_double = 14;
  repeated float repeated_float = 15 [packed = true];
  repeated bool repeated_bool = 16;
  repeated string repeated_string = 17 [ctype = CORD];
  repeated TestEnum repeated_enum = 18 [packed = true];
  TestEmbeddedMessage message_embedded = 19;
  google.protobuf.Timestamp timestamp = 20;
  google.protobuf.Duration duration = 21;
  google.protobuf.DoubleValue wkt_double = 22;
  google.protobuf.FloatValue wkt_float = 23;
  google.protobuf.Int64Value wkt_int64 = 24;
  google.protobuf.UInt64Value wkt_uint64 = 25;
  google.protobuf.Int32Value wkt_int32 = 26;
  google.protobuf.UInt32Value wkt_uint32 = 27;
  google.protobuf.BoolValue wkt_bool = 28;
  google.protobuf.StringValue wkt_string = 29;
  google.protobuf.BytesValue wkt_bytes = 30;
  int32 another_int32 = 31;
  map<int64, TestEmbeddedMessage> map_embedded_message = 32;
}

service CloudAuditLogService {
  // Test method.
  rpc TestMethod(TestMessage) returns (TestMessage);
}
